@@ -1,3 +1,7 @@
+2010-04-20  Tolleiv Nietsch <nietsch@aoemedia.de> 
+
+	* Fixed issue: #13975: hasElementForeignReferences might cause maximum execution time error
+
 2010-04-17  Tolleiv Nietsch <nietsch@aoemedia.de> 
 
 	* Fixed issue: #14141: Drag&Drop should scroll automatically 
